# python_wordle_kata

./: Makefile  pyproject.toml
python_linting_exploration/: example_python_file.py
tests/: example_python_file_test.py
