[tool.poetry]
name = "python-linting-exploration"
version = "0.1.0"
description = ""
authors = ["kpinakula <7438240+kpinakula@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_linting_exploration"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
pylint = "^2.16.2"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
